--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 Lab 2/Task1/build/*
 !Lab 2/Task1/build/Images
+Lab 2/Task2/build/*
+!Lab 2/Task2/build/Images
+Lab 2/Task3/build/*
+!Lab 2/Task3/build/Images
+Lab 2/Task4/build/*
+!Lab 2/Task4/build/Images
+Lab 2/Task5/build/*
+!Lab 2/Task5/build/Images
